2004-06-24  Hans Petter Jansson  <hpj@ximian.com>

	* gui/contact-editor/e-contact-editor.c (address_labels): Add table.
	(append_to_address_label): Implement.
	(set_address_label): Implement.
	(extract_address_record): Set the address label fields.

2004-06-24  Hans Petter Jansson  <hpj@ximian.com>

	* util/eab-book-util.c (eab_contact_list_from_string): Don't accept
	input that doesn't have at least a "BEGIN:VCARD" in it.

2004-06-24  Radek Doulik  <rodo@ximian.com>

	* gui/component/select-names/e-select-names-model.c
	(e_select_names_model_get_textification): do not limit the text
	len to 2047 characters

	See bug #60366

2004-06-23  Hans Petter Jansson  <hpj@ximian.com>

	* gui/contact-editor/contact-editor.glade: Set window to be invisible
	initially.

	* gui/contact-editor/e-contact-editor.c (e_contact_editor_init): Set
	the type hint to "normal", and show the window after init.

2004-06-23  Not Zed  <NotZed@Ximian.com>

	* gui/widgets/eab-gui-util.c
	(eab_send_contact_list_as_attachment): use memcpy not strcpy to
	copy to memory buffer.  Fixes a UMW.  See #60532.

2004-06-23  Hans Petter Jansson  <hpj@ximian.com>

	* gui/component/addressbook-view.c: Add an x-source-vcard target entry
	that includes the source book URI.
	(destroy_merge_context): Implement.
	(removed_contact_cb): Implement.
	(merged_contact_cb): Implement.
	(selector_tree_drag_data_received): Get the source and target books,
	and see if we need to remove contacts from source after they're added
	to target. Copy contacts sequentially, not in parallel, with a
	callback.

	* gui/widgets/e-addressbook-view.c: Add an x-source-vcard target entry
	that includes the source book URI.
	(table_drag_data_delete): Remove. This is handled by the drag target.
	(table_drag_data_get): Handle more than one contact. Supply source.
	(create_table_view): Don't connect to the delete signal.

	* gui/widgets/e-minicard-view.c: Add an x-source-vcard target entry
	that includes the source book URI.